--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿afinn==0.1
+afinn==0.1
 aiocontextvars==0.2.1
 aiohttp==3.5.4
 async-timeout==3.0.1
@@ -43,11 +43,7 @@ nbformat==4.4.0
 nltk==3.4
 numpy==1.16.1
 pandas==0.24.1
-<<<<<<< HEAD
-#plotly==3.6.0
-=======
 plotly==3.6.0
->>>>>>> 2f3a62a0a3f2132eba4ae9989fde098fab021848
 psycopg2==2.7.7
 py4j==0.10.4
 pymongo==3.7.2
@@ -67,6 +63,7 @@ terminaltables==3.1.0
 traitlets==4.3.2
 typing-extensions==3.7.2
 urllib3==1.24.1
+vaderSentiment==3.2.1
 venusian==1.2.0
 Werkzeug==0.14.1
 yarl==1.3.0
