--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,6 @@ dash-table==3.3.0
 decorator==4.3.2
 emoji==0.5.1
 emoji-extractor==1.0.17
-findspark==1.3.0
 Flask==1.0.2
 Flask-Compress==1.4.0
 Flask-SQLAlchemy==2.3.2
@@ -46,11 +45,10 @@ pandas==0.24.1
 plotly==3.6.0
 psycopg2==2.7.7
 py4j==0.10.4
-pymongo==3.7.2
 pyspark==2.1.2
 pyspark-stubs==2.4.0.post1
 python-dateutil==2.8.0
-python-twitch-client==0.6.0
+kafka==1.4.4
 pytz==2018.9
 regex==2019.2.5
 requests==2.21.0
