--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-﻿afinn==0.1
-aiocontextvars==0.2.1
+﻿aiocontextvars==0.2.1
 aiohttp==3.5.4
 async-timeout==3.0.1
 attrs==18.2.0
@@ -19,19 +18,14 @@ dash-html-components==0.13.5
 dash-renderer==0.17.0
 dash-table==3.3.0
 decorator==4.3.2
-emoji==0.5.1
-emoji-extractor==1.0.17
 Flask==1.0.2
 Flask-Compress==1.4.0
-Flask-SQLAlchemy==2.3.2
 idna==2.8
 idna-ssl==1.1.0
 immutables==0.6
-ipython-genutils==0.2.0
 itsdangerous==1.1.0
 Jinja2==2.10
 jsonschema==2.6.0
-jupyter-core==4.4.0
 kafka-python==1.4.4
 MarkupSafe==1.1.0
 mode==3.0.8
@@ -55,7 +49,6 @@ retrying==1.3.3
 scipy==1.2.0
 singledispatch==3.4.0.3
 six==1.12.0
-SQLAlchemy==1.2.17
 terminaltables==3.1.0
 traitlets==4.3.2
 typing-extensions==3.7.2
